--- a/index.html
+++ b/index.html
@@ -242,8 +242,9 @@
     <div class="hr"></div>
 
     <h2>Export</h2>
-    <label>State name (เช่น idle/walk/run/sleep/dead)</label>
+    <label>File name (เช่น idle_walk / run_01 / sleep) <span style="opacity:.8">(ไม่ต้องใส่นามสกุล)</span></label>
     <input id="state" type="text" value="walk" />
+    <div class="hint">ระบบจะใช้ชื่อนี้เป็น prefix ของไฟล์ที่ export ทั้งหมด เช่น <b>&lt;file&gt;.json</b>, <b>&lt;file&gt;_frames.zip</b>, <b>&lt;file&gt;_sheet.png</b></div>
 
     <div class="row">
       <div>
